--- a/android/res/layout/android_question_screen.xml
+++ b/android/res/layout/android_question_screen.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="71dp"
-        android:text="Q1: What is the decimal number for ?"
+        android:text="What is the decimal number for ?"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
@@ -20,7 +20,8 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:ems="10"
-        android:inputType="number" >
+        android:inputType="number" 
+        >
 
         <requestFocus />
     </EditText>
