--- a/android/res/layout/choice_4_question.xml
+++ b/android/res/layout/choice_4_question.xml
@@ -24,15 +24,13 @@
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/hello_world"
-            android:onClick="buttonPress" />
+            android:text="@string/hello_world" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/hello_world"
-            android:onClick="buttonPress" />
+            android:text="@string/hello_world" />
     </LinearLayout>
 
     <LinearLayout
@@ -44,15 +42,13 @@
             android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/hello_world"
-            android:onClick="buttonPress" />
+            android:text="@string/hello_world" />
 
         <Button
             android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/hello_world"
-            android:onClick="buttonPress" />
+            android:text="@string/hello_world" />
     </LinearLayout>
 
 </LinearLayout>
